samples/_failures_safe/1761518945_2453d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5de8d8d6.c: In function ‘main’:
./samples/SAFE/__tmp_5de8d8d6.c:135:25: error: missing terminating " character
  135 |         fprintf(stderr, "Decompression failed\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5de8d8d6.c:135:9: error: expected expression at end of input
  135 |         fprintf(stderr, "Decompression failed\n
      |         ^~~~~~~
./samples/SAFE/__tmp_5de8d8d6.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5de8d8d6.c:135:9: error: expected declaration or statement at end of input
